syntax = "proto3";

package fastport.protocols.commons;
option csharp_namespace = "FastPort.Protocols.Commons";

option optimize_for = SPEED;

enum ProtocolId 
{
	PROTOCOL_ID_UNSPECIFIED = 0;
	PROTOCOL_ID_TESTS		= 1;
}

// Basic test-purpose protocol definitions.

enum ResultCode {
  RESULT_CODE_UNSPECIFIED = 0;
  RESULT_CODE_OK = 1;
  RESULT_CODE_ERROR = 2;
}

message Empty {}

message Header 
{  
	uint64 request_id		= 1;	// Client-generated request id for correlating request/response.  
	uint64 timestamp_ms		= 2;	// Unix epoch milliseconds.
}